--- a/src/styles/FloatingChatBot.css
+++ b/src/styles/FloatingChatBot.css
@@ -4,7 +4,7 @@
   right: 40px;
   width: 50px;
   height: 50px;
-  background-color: #00c7eb;
+  background-color: #00d9ff;
   border: none;
   border-radius: 50%;
   display: flex;
@@ -29,7 +29,7 @@
 
 /* Button hover effect */
 .floating-chat-bot:hover {
-  background-color: #00a5c4;
+  background-color: #00c7eb;
 }
 
 /* Default icon style */
