--- a/src/styles/AboutPage.css
+++ b/src/styles/AboutPage.css
@@ -152,10 +152,11 @@
   color: var(--text-dark);
   font-family: "Helvetica Neue", Arial, sans-serif;
 }
+
 .navigation-section {
   /* padding: 20px; */
-  background-color: #00d9ff; /* Light gray to complement #f8f9fa and #e3f8ed */
-  border-radius: 10px;
+  /* background-color: #00d9ff;  */
+  border-radius: 8px;
   /* box-shadow: var(--shadow); */
   width: 100%;
 }
@@ -187,7 +188,7 @@
   height: 100%;
   background-color: white;
   border: 1px solid var(--brand-color);
-  border-radius: 10px;
+  border-radius: 8px;
   text-decoration: none;
   color: var(--text-dark);
   padding: 20px;
@@ -227,7 +228,7 @@
   /* border-top: 1px solid #ffc107;
   border-right: 1px solid #ffc107;
   border-bottom: 1px solid #ffc107; */
-  border-radius: 10px 10px;
+  border-radius: 8px 8px;
   cursor: pointer;
   position: relative;
   overflow: hidden;
@@ -263,7 +264,7 @@
   border-left: 1px solid #e0e0e0; */
   padding: 0 20px;
   margin-top: -10px;
-  border-radius: 0 0 10px 10px;
+  border-radius: 0 0 8px 8px;
   transition: max-height 0.7s cubic-bezier(0.4, 0, 0.2, 1),
     padding 0.7s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s ease; /* Smoother with opacity fade */
   opacity: 0;
@@ -283,12 +284,12 @@
   }
 
   .navigation-section-page {
-    margin: 40px 0px;
+    margin: 40px 0px 30px 0px;
     padding: 20px;
   }
 
   .about-page h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   .about-page p,
@@ -309,7 +310,9 @@
   .privacy-notice {
     padding: 12px;
   }
-
+  .button-grid {
+    gap: 10px; /* Space between buttons */
+  }
   .nav-button {
     height: 80px; /* Reduced height for mobile */
     padding: 10px; /* Reduced padding */
