--- a/src/styles/ChildProfileForm.css
+++ b/src/styles/ChildProfileForm.css
@@ -4,7 +4,9 @@
   flex-wrap: nowrap; /* Prevent wrapping unless in mobile view */
   justify-content: space-between; /* Space between sections in desktop mode */
   gap: 10px; /* Reduced from 20px */
-  width: calc(100% - 80px); /* Subtract margin (20px on each side) */
+  max-width: 1200px;
+
+  /* width: calc(100% - 80px);  */
   box-sizing: border-box; /* Include padding and borders in the total width */
   margin: 60px auto; /* Reduced from 60px */
   padding: 10px; /* Reduced from 20px */
@@ -394,12 +396,15 @@ textarea::placeholder {
 .dropdown-option input {
   margin-right: 5px;
 }
-
+@media (max-width: 1276px) {
+  .form-wrapper {
+    margin: 60px 20px;
+  }
+}
 /* Mobile Adjustments */
 @media (max-width: 768px) {
   .form-wrapper {
     flex-direction: column; /* Stack sections vertically on smaller screens */
-    width: calc(100% - 40px); /* Keep the 20px margin on smaller screens */
     justify-content: flex-start; /* Align items at the top */
     align-items: center; /* Center horizontally stacked items */
   }
