--- a/src/styles/FloatingInfoBot.css
+++ b/src/styles/FloatingInfoBot.css
@@ -23,6 +23,8 @@
 .info-icon {
   color: #00d9ff;
   font-size: 24px;
+  border: 1px solid #cccccc;
+  border-radius: 50%;
 }
 
 .floating-info-bot:hover {
